--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd build && rm -rf * && cmake .. && make",
+    "build": "cd ../common && npm run build && cd ../rendering && cd build && rm -rf * && cmake .. && make",
     "server": "./build/bin/server",
     "client": "./build/bin/client"
   },
