Interface RenderingService with renderer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,24 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 SET(CMAKE_CXX_STANDARD 14)
 
+SET(PUBLIC_HEADER_FILES public_headers/Step.h public_headers/InitService.h)
+
+include_directories(/usr/local/include/nlohmann)
 INCLUDE(FindProtobuf)
 
-SET(SOURCE_FILES RenderingService.cpp main.cpp)
+SET(SOURCE_FILES RenderingService.cpp InitService.cpp)
 
-add_executable (renderingService main.cpp RenderingService.cpp)
-
-ADD_LIBRARY(rendering ${SOURCE_FILES})
+ADD_LIBRARY(renderingService SHARED ${SOURCE_FILES})
 
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${common_BINARY_DIR})
 INCLUDE_DIRECTORIES(${common_SOURCE_DIR})
 
-TARGET_LINK_LIBRARIES(rendering ${LIBRARIES})
-
 TARGET_LINK_LIBRARIES(renderingService ${LIBRARIES} common)
+
+INSTALL(TARGETS renderingService
+        LIBRARY DESTINATION lib)
+
+INSTALL(FILES ${PUBLIC_HEADER_FILES} DESTINATION include/navirice)
+
+
