Add FPIC option

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 SET(CMAKE_CXX_STANDARD 14)
+SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 SET(PUBLIC_HEADER_FILES public_headers/Step.h public_headers/InitService.h)
 
